--- a/Rmarkdown.html
+++ b/Rmarkdown.html
@@ -373,6 +373,7 @@ Rodríguez</h4>
 <li>Altas Hospitalarias</li>
 <li>Relación</li>
 <li>Conclusiones</li>
+<li>Bibliografía</li>
 </ol>
 </div>
 <div id="objetivos" class="section level2">
@@ -403,6 +404,33 @@ a esta.</p></li>
 </div>
 <div id="calidad-del-aire" class="section level2">
 <h2>Calidad del Aire</h2>
+<p>La calidad del aire se puede definir como la concentración de
+contaminante que llega a un receptor, más o menos alejado de la fuente
+de emisión.</p>
+<p>Para poder medir la calidad del aire, es necesario conocer el valor
+del índice de calidad del aire (ICA), que nos indica la contaminación
+atmosférica y los efectos para la salud.</p>
+<p>El Índice de Calidad del Aire (ICA) define seis categorías de calidad
+del aire, cada una con su código de colores asociado, un nivel para la
+salud y el índice de la calidad del aire:</p>
+<ul>
+<li><p>Verde: Buena para la salud (ICA de 0 a 50)</p></li>
+<li><p>Amarillo: Moderada (ICA de 51 a 100)</p></li>
+<li><p>Naranja: Dañina a la salud para grupos sensibles (ICA de 101 a
+150)</p></li>
+<li><p>Rojo: Dañina a la salud (ICA 151 a 200)</p></li>
+<li><p>Morado: Muy dañina a la salud (ICA 201 a 300)</p></li>
+<li><p>Marrón: Peligrosa (ICA superior a 300)</p></li>
+</ul>
+<p>Para llevar a cabo el cálculo, se asigna la peor categoría de los
+contaminantes medidos en las estaciones de control de las redes de
+vigilancia. Estos contaminantes son:</p>
+<ul>
+<li><p>Partículas en suspensión (PM<sub>10</sub>)</p></li>
+<li><p>Ozono troposférico (O<sub>3</sub>)</p></li>
+<li><p>Dióxido de nitrógeno (NO<sub>2</sub>)</p></li>
+<li><p>Dióxido de azufre (SO<sub>2</sub>)</p></li>
+</ul>
 </div>
 <div id="altas-hospitalarias" class="section level2">
 <h2>Altas Hospitalarias</h2>
@@ -412,6 +440,10 @@ a esta.</p></li>
 </div>
 <div id="conclusiones" class="section level2">
 <h2>Conclusiones</h2>
+</div>
+<div id="bibliografía" class="section level2">
+<h2>Bibliografía</h2>
+<p><a href="https://www.fundacionaquae.org/wiki/como-se-mide-calidad-aire/" class="uri">https://www.fundacionaquae.org/wiki/como-se-mide-calidad-aire/</a></p>
 <p>This is an R Markdown document. Markdown is a simple formatting
 syntax for authoring HTML, PDF, and MS Word documents. For more details
 on using R Markdown see <a href="http://rmarkdown.rstudio.com" class="uri">http://rmarkdown.rstudio.com</a>.</p>
