--- a/Rmarkdown.html
+++ b/Rmarkdown.html
@@ -473,6 +473,29 @@ Enfermedades.</p>
 </div>
 <div id="conclusiones" class="section level2">
 <h2>Conclusiones</h2>
+<p>Tras analizar la relación de los datos de las altas hospitalarias en
+función de las comunidades autónomas con la calidad del aire de cada una
+de ellas, analizando las enfermedades por separado:</p>
+<p>En cuanto a enfermedades respiratorias y circulatorias:</p>
+<ul>
+<li>El mayor número de altas se da en Cantabria, que a su vez, el la que
+presenta la mejor calidad del aire.</li>
+</ul>
+<p>En cuanto a enfermedades osteoarticulares:</p>
+<ul>
+<li>El mayor índice de altas es en Palma de Mallorca y el menor es en
+Valencia, teniendo ambas una calidad de aire en un rango similar (ICA:
+Razonablemente Buena).</li>
+</ul>
+<p>En resumen, en estas tablas no hemos encontrado una relación evidente
+entre la calidad del aire de una comunidad y la salud de sus habitantes.
+Esto puede ser debido a que los datos que hemos seleccionado no sean los
+más adecuados porque no representan una población real, no hemos
+abarcado todas las magnitudes que definen la calidad del aire, o bien,
+la influencia del Covid-19, ya que el análisis lo hemos realizado con
+datos del año 2020, por lo que los resultados esperados pueden haberse
+visto afectados. Por lo tanto, los resultados que hemos obtenido tras
+este estudio no son aquellos que esperábamos.</p>
 </div>
 <div id="bibliografía" class="section level2">
 <h2>Bibliografía</h2>
